Fix profile page layout jumping when scrolling The first post height was affected by the floating block when affix wasn't active

--- a/less/common/sideNav.less
+++ b/less/common/sideNav.less
@@ -98,6 +98,7 @@
 @media @desktop-up {
   .sideNav {
     float: left;
+    height: 0;
 
     &, > ul {
       width: 190px;
